# matrix-system

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETE_SOLUTION.md  CONTRIBUTING.md  DEMO_VERIFICATION.md  DEPLOYMENT.md  DEPLOY_NOW.md  DOCKER.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  REFACTORING_COMPLETE.md  SUPERINTELLIGENCE_ROADMAP.md  create_components.sh  deploy_complete_dashboard.sh  docker-compose.yml  generate_all_components.sh  pyproject.toml
.github/workflows/: docker-publish.yml
examples/: basic_usage.py
frontend/: .env.example  COMPONENTS_README.md  ENTERPRISE_FEATURES.txt  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup  page_full.tsx
frontend/src/components/shared/: Card.tsx  StatusBadge.tsx  TrafficVisualizer.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
src/matrix_system/: __init__.py
src/matrix_system/api/: __init__.py  client.py  exceptions.py  main.py
src/matrix_system/cli/: __init__.py  main.py
src/matrix_system/ethics/: __init__.py  core.py  decision.py  transparency.py
src/matrix_system/intelligence/: __init__.py  goals.py  memory.py  meta_learning.py
src/matrix_system/models/: __init__.py  events.py  health.py  proposal.py
src/matrix_system/survival/: __init__.py  core.py
src/matrix_system/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_events.py  test_health.py  test_proposal.py
